--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -5,10 +5,11 @@ on: [push]
 jobs:
   build-ubuntu:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v1
+    - uses: lukka/get-cmake@latest
     - name: configure
       run: mkdir build && cd build && cmake ..
     - name: build
