--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -3,7 +3,7 @@ name: BRL-CAD
 on: [push]
 
 jobs:
-  build-ubuntu:
+  build-mac:
 
     runs-on: macos-latest
 
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: lukka/get-cmake@latest
     - name: configure
-      run: mkdir build && cd build && cmake ..
+      run: mkdir build && cd build && cmake .. -DENABLE_ALL=ON
     - name: build
       run: cmake --build build
     - name: test
