--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -11,8 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: lukka/get-cmake@latest
     - name: configure
-      run: mkdir build && cd build && cmake .. -DENABLE_ALL=ON
-      run: ls -R
+      run: mkdir build && cd build && cmake .. -DENABLE_ALL=ON && ls -R
     - name: build
       run: cd build && make VERBOSE=1
     - name: test
