--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -11,8 +11,8 @@ jobs:
     - uses: actions/checkout@v1
     - uses: lukka/get-cmake@latest
     - name: configure
-      run: mkdir build && cd build && cmake --version && cmake .. -DENABLE_ALL=ON && ls -R
+      run: mkdir build && cd build && cmake --version && cmake .. && ls -R
     - name: build
-      run: cd build && make VERBOSE=1 && ls -R
+      run: cmake --build build -v && ls -R
     - name: test
       run: cd build && make check VERBOSE=1
