--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: lukka/get-cmake@latest
     - name: configure
-      run: mkdir build && cd build && cmake --version && cmake .. && ls -R
+      run: mkdir build && cd build && cmake --version && cmake .. -DENABLE_ALL=ON && cmake .. && ls -R
     - name: build
       run: cmake --build build -v && ls -R
     - name: test
