--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -11,8 +11,12 @@ jobs:
     - uses: actions/checkout@v1
     - uses: lukka/get-cmake@latest
     - name: configure
-      run: mkdir build && cd build && cmake --version && cmake .. -DENABLE_ALL=ON && cmake .. && ls -R
+      run: mkdir build && cd build && cmake --version && cmake .. -DENABLE_ALL=ON && more CMakeCache.txt && ls -R
     - name: build
+      run: cmake --build build -v && ls -R
+    - name: configure2
+      run: cd build && cmake .. && more CMakeCache.txt && ls -R
+    - name: build2
       run: cmake --build build -v && ls -R
     - name: test
       run: cd build && make check VERBOSE=1
