--- a/src/libicv/CMakeLists.txt
+++ b/src/libicv/CMakeLists.txt
@@ -30,8 +30,8 @@ if(CPP_DLL_DEFINES)
   set_property(TARGET libicv APPEND PROPERTY COMPILE_DEFINITIONS "NETPBM_DLL_IMPORTS")
 endif(CPP_DLL_DEFINES)
 if (TARGET png)
-  set_source_files_properties(fileformat.c PROPERTIES OBJECT_DEPENDS png)
-  set_source_files_properties(png.c PROPERTIES OBJECT_DEPENDS png)
+  set_source_files_properties(fileformat.c PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/../other/libpng/pnglibconf.h")
+  set_source_files_properties(png.c PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/../other/libpng/pnglibconf.h")
 endif (TARGET png)
 
 add_subdirectory(tests)
