--- a/misc/tools/env2c/CMakeLists.txt
+++ b/misc/tools/env2c/CMakeLists.txt
@@ -46,7 +46,15 @@ include_directories(
 
 find_package(Threads)
 
+include(CheckCXXCompilerFlag)
+check_cxx_compiler_flag(-O3 O3_COMPILER_FLAG)
+
 add_executable(env2c env2c.cxx)
+if (O3_COMPILER_FLAG)
+  # If we have the O3 flag, use it
+  target_compile_options(env2c PRIVATE "-O3")
+endif (O3_COMPILER_FLAG)
+
 target_link_libraries(env2c ${CMAKE_THREAD_LIBS_INIT})
 
 # Local Variables:
