Cute - .git directory exists, so triggering the git logic in distcheck, which isn't what we're after yet (appears to be busted, in fact, but that's a problem for another day...) - try a couple configs with make check

--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -13,8 +13,8 @@ jobs:
     - name: configure
       run: mkdir build && cd build && cmake --version && cmake .. && more CMakeCache.txt && ls -R
     - name: build
-      run: cd build && make distcheck
-      #- name: configure2
-      #run: cd build && rm CMakeCache.txt && cmake .. && more CMakeCache.txt && ls -R
-      #- name: build2
-      #run: cd build && make clean &&  make libicv VERBOSE=1 && ls -R
+      run: cd build && make && make check
+    - name: configure2
+      run: cd build && make distcleanclean && cmake .. -DENABLE_ALL=ON && more CMakeCache.txt && ls -R
+    - name: build2
+      run: cd build && make && make check
