--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -14,6 +14,7 @@ jobs:
       run: mkdir build && cd build && cmake --version && cmake .. && more CMakeCache.txt && ls -R
     - name: build
       run: cd build && make distcheck
+      run: more distcheck-enableall_debug.log && more distcheck-enableall_release.log
       #- name: configure2
       #run: cd build && make distclean && cmake .. -DENABLE_ALL=ON && more CMakeCache.txt && ls -R
       #- name: build2
