--- a/src/fb/CMakeLists.txt
+++ b/src/fb/CMakeLists.txt
@@ -32,6 +32,8 @@ ADD_TARGET_DEPS(fbcmap dm-ogl dm-wgl)
 if(TARGET libtermio)
   BRLCAD_ADDEXEC(fbcolor fbcolor.c "libdm;libtermio")
   ADD_TARGET_DEPS(fbcolor dm-ogl dm-wgl)
+else(TARGET libtermio)
+  CMAKEFILES(fbcolor.c)
 endif(TARGET libtermio)
 BRLCAD_ADDEXEC(fbfade "fbfade.c;ioutil.c" libdm)
 ADD_TARGET_DEPS(fbfade dm-ogl dm-wgl)
@@ -52,12 +54,16 @@ ADD_TARGET_DEPS(fbline dm-ogl dm-wgl)
 if(TARGET libtermio)
   BRLCAD_ADDEXEC(fbpoint fbpoint.c "libdm;libbu;libtermio;libpkg")
   ADD_TARGET_DEPS(fbpoint dm-ogl dm-wgl)
+else(TARGET libtermio)
+  CMAKEFILES(fbpoint.c)
 endif(TARGET libtermio)
 BRLCAD_ADDEXEC(fbstretch "fbstretch.c;ioutil.c" libdm)
 ADD_TARGET_DEPS(fbstretch dm-ogl dm-wgl)
 if(TARGET libtermio)
   BRLCAD_ADDEXEC(fbzoom fbzoom.c "libdm;libtermio")
   ADD_TARGET_DEPS(fbzoom dm-ogl dm-wgl)
+else(TARGET libtermio)
+  CMAKEFILES(fbzoom.c)
 endif(TARGET libtermio)
 BRLCAD_ADDEXEC(gif-fb "gif-fb.c;ioutil.c" libdm)
 ADD_TARGET_DEPS(gif-fb dm-ogl dm-wgl)
