--- a/misc/CMake/distcheck_repo_verify.cmake.in
+++ b/misc/CMake/distcheck_repo_verify.cmake.in
@@ -161,7 +161,7 @@ if(EXISTS "@CMAKE_SOURCE_DIR@/.git")
     set(GIT_TREE_MODIFIED 0)
 
     # Get the file list
-    set(GIT_FILES "")
+    unset(GIT_FILES)
     execute_process(COMMAND ${GIT_EXEC} ls-tree --full-tree -r --name-only HEAD
       WORKING_DIRECTORY "@CMAKE_SOURCE_DIR@"
       OUTPUT_VARIABLE GIT_STDOUT
