Need disclean to work...

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -24,7 +24,14 @@ add_custom_command(
   )
 add_custom_target(benchmark_cp DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/benchmark-${CMAKE_CFG_INTDIR}-done)
 set_target_properties(benchmark_cp PROPERTIES FOLDER "Benchmark")
-DISTCLEAN($<TARGET_FILE_DIR:bark>/benchmark)
+if(CMAKE_CONFIGURATION_TYPES)
+  foreach(CFG_TYPE ${CMAKE_CONFIGURATION_TYPES})
+    string(TOUPPER "${CFG_TYPE}" CFG_TYPE_UPPER)
+    DISTCLEAN(${CMAKE_BINARY_DIR_${CFG_TYPE_UPPER}}/${BIN_DIR}/benchmark)
+  endforeach(CFG_TYPE ${CMAKE_CONFIGURATION_TYPES})
+else(CMAKE_CONFIGURATION_TYPES)
+  DISTCLEAN(${CMAKE_BINARY_DIR}/${BIN_DIR}/benchmark)
+endif(CMAKE_CONFIGURATION_TYPES)
 
 file(WRITE  "${CMAKE_BINARY_DIR}/CMakeTmp/benchmsg.cmake" "message(\"---\")\n")
 file(APPEND "${CMAKE_BINARY_DIR}/CMakeTmp/benchmsg.cmake" "message(\"Run 'make benchmark-clean' in the bench directory to delete the logic\")\n")
