--- a/regress/solids/CMakeLists.txt
+++ b/regress/solids/CMakeLists.txt
@@ -2,7 +2,7 @@
 if (SH_EXEC AND TARGET mged AND TARGET asc2g)
 
   add_test(NAME regress-solids COMMAND ${SH_EXEC} "${CMAKE_CURRENT_SOURCE_DIR}/solids.sh" ${CMAKE_SOURCE_DIR})
-  BRLCAD_REGRESSION_TEST(regress-solids "rt;asc2g;pixdiff;pix-png;png-pix" TEST_DEFINED)
+  BRLCAD_REGRESSION_TEST(regress-solids "rt;asc2g;asc2pix;pixdiff;pix-png;png-pix" TEST_DEFINED)
 
 endif (SH_EXEC AND TARGET mged AND TARGET asc2g)
 
