--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -68,12 +68,7 @@ jobs:
     #
   steps:
     - uses: actions/checkout@v1
-
-    - name: Setup Ninja
-      uses: ashutoshvarma/setup-ninja@master
-      with:
-        # ninja version to download. Default: 1.10.0
-        version: 1.10.0
+    - uses: ashutoshvarma/setup-ninja@master
 
     - name: Configure
       shell: cmake -P {0}
