--- a/src/other/tk/CMakeLists.txt
+++ b/src/other/tk/CMakeLists.txt
@@ -98,9 +98,18 @@ add_definitions(-DTCL_SHLIB_EXT="${CMAKE_SHARED_LIBRARY_SUFFIX}")
 #----------------------------------------------------------------------------
 # Define some platform specific flags
 
+
+# Windows specific flags
 if (MSVC)
-  add_definitions(-DUNICODE -D_UNICODE -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -Ot -Oi -fp:strict -Gs -GS -GL -MD -DSUPPORT_CONFIG_EMBEDDED -DHAVE_UXTHEME_H=1)
+  add_definitions(-DUNICODE -D_UNICODE -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -DSUPPORT_CONFIG_EMBEDDED -DHAVE_UXTHEME_H=1)
 endif (MSVC)
+function(TCL_WIN_FLAGS srcfiles)
+  if (MSVC)
+    foreach(srcfile ${${srcfiles}})
+      set_property(SOURCE ${srcfile} APPEND_STRING PROPERTY COMPILE_DEFINITIONS "-Ot -Oi -fp:strict -Gs -GS -GL -MD")
+    endforeach(srcfile ${${srcfiles}})
+  endif (MSVC)
+endfunction(TCL_WIN_FLAGS)
 
 if (MINGW)
   add_definitions(-D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -DSUPPORT_CONFIG_EMBEDDED -DHAVE_UXTHEME_H=1)
@@ -585,7 +594,6 @@ set(TK_WIN_SRCS
   xlib/ximage.c
   xlib/xutil.c
   win/stubs.c
-  win/rc/tk.rc
   generic/tkFileFilter.c
   generic/tkMacWinMenu.c
   generic/tkPointer.c
@@ -623,8 +631,6 @@ set(TK_WIN_SRCS
   win/tkMainASCII.c
   )
 
-set_property(SOURCE win/tkMainASCII.c APPEND PROPERTY COMPILE_DEFINITIONS TK_ASCII_MAIN)
-
 set(TK_SRCS ${TK_GENERIC_SRCS} ${TTK_SRCS})
 
 if (WIN32)
@@ -636,6 +642,10 @@ else (WIN32)
     set(TK_SRCS ${TK_SRCS} ${TK_X11_SRCS})
   endif (TK_ENABLE_AQUA)
 endif (WIN32)
+
+TCL_WIN_FLAGS(TK_SRCS)
+TCL_WIN_FLAGS(TK_STUB_SRCS)
+set_property(SOURCE win/tkMainASCII.c APPEND PROPERTY COMPILE_DEFINITIONS TK_ASCII_MAIN)
 
 set(TK_INCLUDE_PATH ${TK_SOURCE_DIR}/generic ${TK_SOURCE_DIR}/bitmaps ${TK_BINARY_DIR}/include)
 if (WIN32)
@@ -657,6 +667,11 @@ if (NOT WIN32)
 else (NOT WIN32)
   set(WISH_SRCS win/winMain.c)# win/rc/wish.rc)
 endif (NOT WIN32)
+
+if (MSVC)
+  set(TK_SRCS ${TK_SRCS} win/rc/tk.rc)
+  set(CMAKE_RC_FLAGS /i${CMAKE_CURRENT_BINARY_DIR})
+endif (MSVC)
 
 if (X11_INCLUDE_DIR)
   set(TK_X11_INCLUDE_DIRS ${TK_X11_INCLUDE_DIRS} ${X11_INCLUDE_DIR})
@@ -761,6 +776,7 @@ foreach(hdrfile ${TK_HDRS})
 endforeach(hdrfile ${LIBRARY_FILES})
 
 if (WIN32)
+  TCL_WIN_FLAGS(WISH_SRCS)
   add_executable(wish WIN32 ${WISH_SRCS})
   target_link_libraries(wish tcl tk imm32.lib comctl32.lib)
 else (WIN32)
