--- a/misc/repoconv/github_ci_actions.yml
+++ b/misc/repoconv/github_ci_actions.yml
@@ -31,6 +31,11 @@ jobs:
     #  Define a matrix of the operating system and compiler combinations
     #  we want to build against.
     #
+    #  Note that for Windows the vcvars64.bat script is important - that
+    #  is what sets up environment variables to make sure we get the 64
+    #  bit version of the compiler and libraries.  See:
+    #  https://docs.microsoft.com/en-us/cpp/build/building-on-the-command-line
+    #
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
     strategy:
@@ -66,8 +71,13 @@ jobs:
     #  so the script recognizes when it is in that environment and
     #  operates accordingly.
     #
+    #  We use https://github.com/marketplace/actions/install-ninja-build-tool
+    #  to set up and use the Ninja build tool on the runner, rather than using
+    #  make or msbuild.
+    #
     steps:
     - uses: actions/checkout@v1
+    - uses: seanmiddleditch/gha-setup-ninja@master
 
     - name: Configure
       shell: cmake -P {0}
@@ -75,10 +85,10 @@ jobs:
         set(ENV{CC} ${{ matrix.config.cc }})
         set(ENV{CXX} ${{ matrix.config.cxx }})
 
-        if ("${{ runner.os }}" STREQUAL "Windows" AND NOT "x${{ matrix.config.environment_script }}" STREQUAL "x")
+          if ("${{ runner.os }}" STREQUAL "Windows" AND NOT "x${{ matrix.config.environment_script }}" STREQUAL "x")
           execute_process(
-            COMMAND "${{ matrix.config.environment_script }}" && set
-            OUTPUT_FILE environment_script_output.txt
+          COMMAND "${{ matrix.config.environment_script }}" && set
+          OUTPUT_FILE environment_script_output.txt
           )
           file(STRINGS environment_script_output.txt output_lines)
           foreach(line IN LISTS output_lines)
@@ -97,6 +107,7 @@ jobs:
         execute_process(
           COMMAND cmake
             -S .
+            -G Ninja
             -B build
             -D CMAKE_BUILD_TYPE=$ENV{BUILD_TYPE}
             -D CMAKE_VERBOSE_DISTCHECK=ON
