--- a/src/libanalyze/CMakeLists.txt
+++ b/src/libanalyze/CMakeLists.txt
@@ -45,6 +45,7 @@ set(LIBANALYZE_SOURCES
   nirt/diff.cpp
   obj_to_pnts.cpp
   overlaps.c
+  pnt_inside.c
   polygonizer.c
   raydiff.c
   #find_subtracted_shapes.cpp
