--- a/src/libdm/tests/CMakeLists.txt
+++ b/src/libdm/tests/CMakeLists.txt
@@ -42,16 +42,13 @@ if (BRLCAD_ENABLE_TK)
     ${TCL_INCLUDE_PATH}
     ${TK_INCLUDE_PATH}
     )
-
   BRLCAD_ADDEXEC(tcl_img tcl_img.cpp "libdm;libbu;${TCL_LIBRARY};${TK_LIBRARY}" TEST_USEDATA)
   BRLCAD_ADDEXEC(tcl_tevent tcl_tevent.cpp "libdm;libbu;${TCL_LIBRARY};${TK_LIBRARY}" TEST_USEDATA)
 endif (BRLCAD_ENABLE_TK)
 
 CMAKEFILES(CMakeLists.txt)
-CMAKEFILES(
-  tcl_img.cpp
-  tcl_tevent.cpp
-  )
+CMAKEFILES(tcl_img.cpp)
+CMAKEFILES(tcl_tevent.cpp)
 
 # Local Variables:
 # tab-width: 8
@@ -59,5 +56,4 @@ CMAKEFILES(
 # indent-tabs-mode: t
 # End:
 # ex: shiftwidth=2 tabstop=8
-
 
