--- a/src/brlman/CMakeLists.txt
+++ b/src/brlman/CMakeLists.txt
@@ -3,8 +3,10 @@ set(BRLMAN_INCLUDE_DIRS
   ${BU_INCLUDE_DIRS}
   ${TCLCAD_INCLUDE_DIRS}
   ${TCL_INCLUDE_PATH}
-  ${TK_INCLUDE_PATH}
   )
+if (TARGET Tkhtml)
+  set(BRLMAN_INCLUDE_DIRS ${BRLMAN_INCLUDE_DIRS} ${TK_INCLUDE_PATH})
+endif (TARGET Tkhtml)
 list(REMOVE_DUPLICATES BRLMAN_INCLUDE_DIRS)
 BRLCAD_INCLUDE_DIRS(BRLMAN_INCLUDE_DIRS)
 
