--- a/src/bwish/CMakeLists.txt
+++ b/src/bwish/CMakeLists.txt
@@ -5,8 +5,10 @@ if(TARGET libtclcad)
     ${TERMIO_INCLUDE_DIRS}
     ${TCLCAD_INCLUDE_DIRS}
     ${TCL_INCLUDE_PATH}
-    ${TK_INCLUDE_PATH}
     )
+  if (TK_INCLUDE_PATH)
+    set(BWISH_INCLUDE_DIRS ${BWISH_INCLUDE_DIRS} ${TK_INCLUDE_PATH})
+  endif (TK_INCLUDE_PATH)
   list(REMOVE_DUPLICATES BWISH_INCLUDE_DIRS)
   BRLCAD_INCLUDE_DIRS(BWISH_INCLUDE_DIRS)
 
