--- a/src/libtclcad/CMakeLists.txt
+++ b/src/libtclcad/CMakeLists.txt
@@ -39,8 +39,11 @@ if (BRLCAD_ENABLE_TCL)
     ${BN_INCLUDE_DIRS}
     ${BU_INCLUDE_DIRS}
     ${TCL_INCLUDE_PATH}
-    ${TK_INCLUDE_PATH}
     )
+
+  if (TK_INCLUDE_PATH)
+    set(TCLCAD_INCLUDE_DIRS ${TCLCAD_INCLUDE_DIRS} ${TK_INCLUDE_PATH})
+  endif (TK_INCLUDE_PATH)
 
   # Include directories only needed by the implementation
   set(TCLCAD_LOCAL_INCLUDE_DIRS
@@ -53,7 +56,24 @@ if (BRLCAD_ENABLE_TCL)
     set(TCLCAD_XLIBS ${TCLCAD_XLIBS} ${X11_LIBRARIES})
   endif(BRLCAD_ENABLE_X11)
 
-  BRLCAD_ADDLIB(libtclcad "${LIBTCLCAD_SRCS}" "libged;libdm;libdm;libnmg;libbn;libbu;${TCL_LIBRARY};${TK_LIBRARY};${ITCL_LIBRARY};${ITK_LIBRARY};${TCLCAD_XLIBS}")
+  set(TCLCAD_LIBS
+    libged
+    libdm
+    libnmg
+    libbn
+    libbu
+    ${TCL_LIBRARY}
+    ${ITCL_LIBRARY}
+    ${TCLCAD_XLIBS}
+    )
+  if (TK_LIBRARY)
+    set(TCLCAD_LIBS ${TCLCAD_LIBS} ${TK_LIBRARY})
+  endif (TK_LIBRARY)
+  if (ITK_LIBRARY)
+    set(TCLCAD_LIBS ${TCLCAD_LIBS} ${ITK_LIBRARY})
+  endif (ITK_LIBRARY)
+
+  BRLCAD_ADDLIB(libtclcad "${LIBTCLCAD_SRCS}" "${TCLCAD_LIBS}")
   set_target_properties(libtclcad PROPERTIES VERSION 20.0.1 SOVERSION 20)
   if (TARGET itcl_pkgIndex)
     add_dependencies(libtclcad itcl_pkgIndex)
