Put back default

--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -19,6 +19,7 @@
 #
 #  TODO - figure out if we can generate actual release binaries from the
 #  artifacts of these builds.
+#
 
 name: BRL-CAD
 
@@ -41,17 +42,17 @@ jobs:
       fail-fast: false
       matrix:
         config:
-    #   - {
-    #       name: "Windows Latest MSVC", artifact: "Windows-MSVC.tar.xz",
-    #       os: windows-latest,
-    #       cc: "cl", cxx: "cl",
-    #       environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
-    #     }
-    #   - {
-    #       name: "Ubuntu Latest GCC", artifact: "Linux.tar.xz",
-    #       os: ubuntu-20.04,
-    #       cc: "gcc", cxx: "g++"
-    #     }
+        - {
+            name: "Windows Latest MSVC", artifact: "Windows-MSVC.tar.xz",
+            os: windows-latest,
+            cc: "cl", cxx: "cl",
+            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
+          }
+        - {
+            name: "Ubuntu Latest GCC", artifact: "Linux.tar.xz",
+            os: ubuntu-20.04,
+            cc: "gcc", cxx: "g++"
+          }
         - {
             name: "macOS Latest Clang", artifact: "macOS.tar.xz",
             os: macos-latest,
@@ -100,7 +101,18 @@ jobs:
         endif()
         set(ENV{PATH} "$ENV{GITHUB_WORKSPACE}${path_separator}$ENV{PATH}")
 
-         execute_process(
+        if ("${{ runner.os }}" STREQUAL "Windows" AND NOT "x${{ matrix.config.environment_script }}" STREQUAL "x")
+        execute_process(
+          COMMAND cmake
+            -S .
+            -B build
+            -D ENABLE_ALL=ON
+            -D CMAKE_BUILD_TYPE=Release
+            -D CMAKE_VERBOSE_DISTCHECK=ON
+          RESULT_VARIABLE result
+        )
+        else()
+        execute_process(
           COMMAND cmake
             -S .
             -G Ninja
@@ -110,6 +122,7 @@ jobs:
             -D CMAKE_VERBOSE_DISTCHECK=ON
           RESULT_VARIABLE result
         )
+        endif()
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Bad exit status")
         endif()
@@ -149,8 +162,8 @@ jobs:
            )
         else ("${{ runner.os }}" STREQUAL "Windows")
            execute_process(
-             COMMAND cmake --build build --verbose --config Release --target distcheck-full
-             #COMMAND cmake --build build --verbose --config Release --target check
+             COMMAND cmake --build build --verbose --config Release --target all
+             COMMAND cmake --build build --verbose --config Release --target check
              RESULT_VARIABLE result
            )
         endif ("${{ runner.os }}" STREQUAL "Windows")
