--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -160,7 +160,6 @@ jobs:
              COMMAND cmake --build build -j 1 --config Release --target check
              RESULT_VARIABLE result
            )
-        else ("${{ runner.os }}" STREQUAL "Windows")
            execute_process(
              COMMAND cmake --build build --verbose --config Release --target all
              COMMAND cmake --build build --verbose --config Release --target check
@@ -168,6 +167,11 @@ jobs:
            )
         endif ("${{ runner.os }}" STREQUAL "Windows")
         if (NOT result EQUAL 0)
+          if (NOT "${{ runner.os }}" STREQUAL "Windows")
+           execute_process(
+             COMMAND nm build/misc/tools/lemon/CMakeFiles/lemon.dir/lemon.c.o
+           )
+          endif (NOT "${{ runner.os }}" STREQUAL "Windows")
           message(FATAL_ERROR "Bad exit status")
         endif()
 
