--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -160,6 +160,7 @@ jobs:
              COMMAND cmake --build build -j 1 --config Release --target check
              RESULT_VARIABLE result
            )
+        else ("${{ runner.os }}" STREQUAL "Windows")
            execute_process(
              COMMAND cmake --build build --verbose --config Release --target all
              COMMAND cmake --build build --verbose --config Release --target check
