--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -74,7 +74,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: lukka/get-cmake@latest
-    - uses: seanmiddleditch/gha-setup-ninja@master
+      #- uses: seanmiddleditch/gha-setup-ninja@master
 
     - name: Configure
       shell: cmake -P {0}
@@ -115,7 +115,6 @@ jobs:
         execute_process(
           COMMAND cmake
             -S .
-            -G Ninja
             -B build
             -D ENABLE_ALL=ON
             -D CMAKE_BUILD_TYPE=Release
