--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -74,7 +74,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: lukka/get-cmake@latest
-      #- uses: seanmiddleditch/gha-setup-ninja@master
+    - uses: seanmiddleditch/gha-setup-ninja@master
 
     - name: Configure
       shell: cmake -P {0}
@@ -115,6 +115,7 @@ jobs:
         execute_process(
           COMMAND cmake
             -S .
+            -G Ninja
             -B build
             -D ENABLE_ALL=ON
             -D CMAKE_BUILD_TYPE=Release
@@ -162,8 +163,8 @@ jobs:
         else ("${{ runner.os }}" STREQUAL "Windows")
            execute_process(
              COMMAND sync
-             COMMAND cmake --build build --verbose --config Release --target all
-             COMMAND cmake --build build --verbose --config Release --target check
+             COMMAND cmake --build build --verbose -j 1 --config Release --target all
+             COMMAND cmake --build build --verbose -j 1 --config Release --target check
              RESULT_VARIABLE result
            )
         endif ("${{ runner.os }}" STREQUAL "Windows")
